@@ -26,6 +26,7 @@
 <a href="CoreTasks/apply.html">Apply/<i>ExecOn</i></a><br>
 <a href="CoreTasks/available.html">Available</a><br>
 <a href="CoreTasks/chmod.html">Chmod</a><br>
+<a href="CoreTasks/condition.html">Condition</a><br>
 <a href="CoreTasks/copy.html">Copy</a><br>
 <a href="CoreTasks/copydir.html"><i>Copydir</i></a><br>
 <a href="CoreTasks/copyfile.html"><i>Copyfile</i></a><br>
